--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(227, 219, 208);
+  background-color: #f9f7fe;
   font-family: sans-serif;
 }
 .container {
@@ -15,6 +15,7 @@ h1 {
   font-size: 36px;
 }
 select {
+  background-color: #f9f7fe;
   display: block;
   width: 100%;
   border-radius: 5px;
